<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#183E46"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="228dp"
            android:layout_height="73dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="562dp"
            android:layout_toEndOf="@+id/imageView3"
            android:fontFamily="@font/alata"
            android:text="@string/description"
            android:textColor="#F4C054"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="224dp"
            android:layout_height="76dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="643dp"
            android:fontFamily="@font/alata"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="#F4C054"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="114dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="580dp"
            android:layout_toStartOf="@+id/textView2"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027"
            app:srcCompat="@drawable/logo"
            tools:ignore="MissingConstraints" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="352dp"
            android:layout_height="455dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="93dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="654dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="22dp"
            android:text="@string/Tomap" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
